# Vara-Stream

./: .env  .env.example  .gitignore  HYPER_VARA_STREAMS_TECHNICAL_REPORT.md  README.md  check_webhook_config.py  demo_github_config.py  gemini_client.py  gemini_langgraph_workflow.py  github_api_client.py  github_config.py  github_errors.py  github_rate_limit.py  github_retry.py  github_webhook.py  hyper-vara-stream.2025-07-22.private-key.pem  main.py  private_key.pem  pyproject.toml  requirements.txt  test_commit_data_fetching.py  test_enhanced_token_management.py  test_enhanced_webhook.py  test_harness.py  test_results.json  test_token_management.py  token_management_improvements.md  vercel.json
.kiro/specs/github-api-integration/: design.md  requirements.md  tasks.md
test_samples/: basic_commit.json  feature_commit.json  suspicious_commit.json
testing/: test_commit_guide.md  test_full_workflow.py  test_github_config.py  test_harness.py  test_manual_analysis.py  test_public_analysis.py
utils/: gemini_optimization.py  langchain_logging.py
vara_stream.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vision/: gemini_vision_analyzer.py
